--- a/GroupCalendarProject/app/src/main/res/layout/activity_create_event.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_create_event.xml
@@ -106,11 +106,14 @@
         android:id="@+id/des_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/timePicker2"
+        android:layout_alignStart="@+id/datePicker2"
         android:ems="10"
         android:hint="Description"
         android:inputType="textMultiLine"
-        android:layout_alignBottom="@+id/timePicker2"
-        android:layout_alignStart="@+id/datePicker2" />
+        android:maxHeight="100dp"
+        android:selectAllOnFocus="false"
+        android:singleLine="true" />
 
     <Button
         android:id="@+id/ok1"
