--- a/GroupCalendarProject/app/src/main/res/layout/activity_friends_page.xml
+++ b/GroupCalendarProject/app/src/main/res/layout/activity_friends_page.xml
@@ -7,21 +7,25 @@
     tools:context="com.SRJB.huliaaaa.groupcalendarproject.FriendsPage">
 
 
-    <ListView
-        android:id="@+id/friendsList"
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Coming Soon!"
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="247dp"
+        android:layout_above="@+id/addFriend"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="197dp" />
 
     <Button
         android:id="@+id/addFriend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_toEndOf="@+id/friendsList"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="23dp"
         android:elevation="0dp"
-        android:text="Add Friend" />
+        android:text="Add Friend"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/textView10" />
 </android.widget.RelativeLayout>
